Adicionadas novas propriedades nos endpoints de criação e detalhes de usuários
